--- a/index.html
+++ b/index.html
@@ -15,11 +15,37 @@
     <title>Weather App</title>
   </head>
   <body>
-      <div class="container">
-    <h1>Hello World</h1>
-    <a href="" class="btn btn-primary">click me
-    </a>
+    <div class="container">
+      <div class="weather-app">
+        <h1>Houston</h1>
+        <ul>
+          <li>Wednesday 5:00</li>
+          <li>Mostly Sunny</li>
+        </ul>
+        <div class="row">
+          <div class="col-md-6">
+            <image
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="mostly-sunny"
+            />
+            28 °C | °F
+          </div>
+          <div class="col-md-6">
+            <ul>
+              <li>Precipitation: 8%</li>
+              <li>Humidity:49%</li>
+              Wind: 10 km/h
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <small>
+      <a href="https://github.com/dgarza27/vanilla-weather-app" target="blank"
+        >Open-source code</a
+      >
+      by Della Garza
+    </small>
+    <script src="src/app.js"></script>
   </body>
-  </div>
-  <script src="src/app.js"></script>
 </html>
