styled main elements of page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -12,6 +11,7 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
   <body>
@@ -34,18 +34,20 @@
             <ul>
               <li>Precipitation: 8%</li>
               <li>Humidity:49%</li>
-              Wind: 10 km/h
+              <li>10 km/h</li>
             </ul>
           </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/dgarza27/vanilla-weather-app"
+            target="blank"
+            >Open-source code</a
+          >
+          by Della Garza
+        </small>
       </div>
     </div>
-    <small>
-      <a href="https://github.com/dgarza27/vanilla-weather-app" target="blank"
-        >Open-source code</a
-      >
-      by Della Garza
-    </small>
     <script src="src/app.js"></script>
   </body>
 </html>
