--- a/index.html
+++ b/index.html
@@ -16,29 +16,40 @@
   </head>
   <body>
     <div class="container">
+      <div class="weather-app-wrapper">
       <div class="weather-app">
+        <div class="overview">
         <h1>Houston</h1>
         <ul>
           <li>Wednesday 5:00</li>
           <li>Mostly Sunny</li>
         </ul>
+        </div>
         <div class="row">
           <div class="col-md-6">
-            <image
-              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              alt="mostly-sunny"
-            />
-            28 °C | °F
+            <div class="clearfix weather-temperature">
+              <img
+               src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                alt="mostly-sunny"
+                class="float-left"
+              />
+            <div class="float-left"> 
+            <strong>28</strong> 
+              °C | °F
+            </div>
+            </div>
+          </div>
           </div>
           <div class="col-md-6">
             <ul>
               <li>Precipitation: 8%</li>
               <li>Humidity:49%</li>
-              <li>10 km/h</li>
+              <li>Wind: 10 km/h</li>
             </ul>
           </div>
         </div>
-        <small>
+      
+       <small>
           <a
             href="https://github.com/dgarza27/vanilla-weather-app"
             target="blank"
@@ -46,7 +57,8 @@
           >
           by Della Garza
         </small>
-      </div>
+        </div>
+        </div>
     </div>
     <script src="src/app.js"></script>
   </body>
