--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>Houston</h1>
+            <h1 id="city"></h1>
             <ul>
-              <li>Wednesday 5:00</li>
-              <li>Mostly Sunny</li>
+              <li id="date"></li>
+              <li>Last updated at <span id="description"></li>
             </ul>
           </div>
           <div class="row">
@@ -36,7 +36,7 @@
                   class="float-left"
                 />
                 <div class="float-left">
-                  <strong>28</strong>
+                  <strong id="temperature"></strong>
                   °C | °F
                 </div>
               </div>
@@ -44,8 +44,8 @@
             <div class="col-md-6">
               <ul>
                 <li>Precipitation: 8%</li>
-                <li>Humidity:49%</li>
-                <li>Wind: 10 km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span>km/h</li>
               </ul>
             </div>
           </div>
