Added relevant API icon
now, city is undefined.

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             <h1 id="city"></h1>
             <ul>
               <li id="date"></li>
-              <li>Last updated at <span id="description"></li>
+              <li>Last updated <span id="description"></li>
             </ul>
           </div>
           <div class="row">
             <div class="col-md-6">
               <div class="d-flex weather-temperature">
                 <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="mostly-sunny"
+                  src=""
+                  id="icon"
                   class="float-left"
                 />
                 <div class="float-left">
