--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
               <input type="search" 
                 placeholder="Type a city..." 
                 class="form-control"
+                id="city-input"
+                autocomplete="off"
               />
               </div>
               <div class="col-3">
