--- a/index.html
+++ b/index.html
@@ -64,7 +64,27 @@
               </ul>
             </div>
           </div>
-          <small>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecase-date">
+                Thursday
+                </div>
+                <img src="https://openweathermap.org/img/wn/01d.png" 
+                  alt="" 
+                  width="36"
+                />
+                <div class="weather-forecast-temperature"></div>
+                <span class="weatherforecast-temperature-max">
+                18° </span>
+                <span class="weatherforecast-temperature-min"> 
+                12° </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+        <small>
             <a
               href="https://github.com/dgarza27/vanilla-weather-app"
               target="blank"
@@ -72,7 +92,7 @@
             >
             by Della Garza
           </small>
-        </div>
+        
       </div>
     </div>
     <script src="src/app.js"></script>
