updated js template for weather forecast

--- a/index.html
+++ b/index.html
@@ -64,25 +64,8 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecase-date">
-                Thursday
-                </div>
-                <img src="https://openweathermap.org/img/wn/01d.png" 
-                  alt="" 
-                  width="36"
-                />
-                <div class="weather-forecast-temperature"></div>
-                <span class="weatherforecast-temperature-max">
-                18° </span>
-                <span class="weatherforecast-temperature-min"> 
-                12° </span>
-                </div>
-              </div>
+          <div class="weather-forecast" id="forecast">
             </div>
-          </div>
           </div>
         <small>
             <a
@@ -91,10 +74,9 @@
               >Open-source code</a
             >
             by Della Garza
-          </small>
-        
+          </small> 
+        </div>
       </div>
-    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
